# data-manifesto

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
Boolean/: index.html
CompressionTypeEnum/: index.html
DataPackage/: index.html
DataResource/: index.html
Date/: index.html
Datetime/: index.html
Decimal/: index.html
DistributionLevel/: index.html
Double/: index.html
Float/: index.html
FormatDialect/: index.html
FormatEnum/: index.html
Information/: index.html
Integer/: index.html
MediaTypeEnum/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
Rule/: index.html
RulePostcondition/: index.html
RulePrecondition/: index.html
String/: index.html
TestRole/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
basename_regexp/: index.html
bytes/: index.html
comment_prefix/: index.html
compression/: index.html
conforms_to/: index.html
conforms_to_class/: index.html
conforms_to_schema/: index.html
created_by/: index.html
created_on/: index.html
datasets/: index.html
delimiter/: index.html
description/: index.html
dialect/: index.html
dirname_regexp/: index.html
double_quote/: index.html
download_url/: index.html
encoding/: index.html
final_suffix/: index.html
format/: index.html
has_suffix/: index.html
hash/: index.html
header/: index.html
issued/: index.html
keywords/: index.html
language/: index.html
last_updated_on/: index.html
license/: index.html
md5/: index.html
(+33 files in other folders)
