[tool.poetry]
name = "data-manifesto"
version = "0.1.0"
description = ""
authors = ["cmungall <cjm@berkeleybop.org>"]
include = ["README.md", "src/linkml", "generated"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
linkml = "^1.2.3"
mkdocs = "^1.2.3"
mkdocs-material = "^8.2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
